--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
-<head>
-    <title>TMDB Hub</title>
+    <head>
+        <title>TMDB Hub</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
-</head>
-<body>
-    <div id="root"></div>
-<script src="/assets/bundle.js"></script>
-</body>
+        <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    </head>
+    <body>
+        <div id="main"></div>
+        <script src="/assets/bundle.js"></script>
+    </body>
 </html>
