Some refactoring. Implemented React Router ready for our other routes to display more details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>TMDB Hub</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Catamaran:400,500,300,700,600' rel='stylesheet' type='text/css'>
