Implemented related movies on the movie details page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Catamaran:400,500,300,700,600' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+
+        <script type="text/javascript">
+        function resize_canvas(){
+            canvas = document.getElementsByClassName("react-blur-canvas");
+            if (canvas.width  < window.innerWidth)
+            {
+                canvas.width  = window.innerWidth;
+            }
+
+            if (canvas.height < window.innerHeight)
+            {
+                canvas.height = window.innerHeight;
+            }
+        }
+    </script>
     </head>
     <body>
         <div id="main"></div>
